# knowledgegraph-natural-language-index

./: .gitignore  Cargo.toml  Makefile  README.md  dbpedia_queries.txt  freebase_queries.txt  queries.txt  update.sh  wikidata_queries.txt
src/: lib.rs
