[package]
name = "sparql-data-preparation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
regex = "1.8"
itertools = "0.10"
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
indicatif = "0.17"
